# EightFoldAI-Assignment

./: README.md  SETUP.md
Ai-Service/: .env.example  main.py  pyproject.toml
Ai-Service/app/: main.py
Ai-Service/app/Config/: dataConfig.py  promptConfig.py  queryConfig.py
Ai-Service/app/api/: websocket.py
Ai-Service/app/core/: llm_client.py  orchestrator.py
Ai-Service/app/db/: supabase_client.py
Ai-Service/app/schemas/: intent.py  plan.py  websocket_messages.py
Ai-Service/app/services/: knowledge_base.py  plan_service.py  research_service.py  voice_service.py
Ai-Service/app/states/: global_state.py
Ai-Service/app/utils/: lifespanUtil.py  logger.py
Ai-Service/tests/: tests.py
Ai-Service/tests/cases/: setup_tests.py  test_client.py  test_edit.py  test_rag.py  verify_db.py
backend/: .env.example  package-lock.json  package.json
backend/src/: index.js
backend/src/config/: db.js
backend/src/controllers/: analyticsController.js  authController.js  conversationController.js
backend/src/middleware/: authMiddleware.js
backend/src/routes/: analyticsRoutes.js  authRoutes.js  conversationRoutes.js
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatInterface.jsx  PageTransition.jsx  Sidebar.jsx  TransitionCurtain.jsx  VoiceInterface.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Home.jsx  Landing.jsx  Login.jsx  Signup.jsx
frontend/src/services/: authService.js
frontend/src/utils/: api.js
(+1 files in other folders)
